<resources>
    <string name="app_name">GoldenOffers</string>
    <string name="users_port">Users Port</string>
    <string name="business_port">Business Port</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rPassword">Repeat Password</string>
    <string name="owner">Owner</string>
    <string name="name">Name</string>
    <string name="afm">Afm</string>
    <string name="getLocation">Get Location</string>
    <string name="register">Register</string>
    <string name="login">LOG IN</string>
    <string name="passReminder">Can\'t remember password? Click Here</string>
    <string name="singup">Not Signed up yet? Register Here</string>
    <string name="welcome">Welcome</string>
    <string name="logout">LOG OUT</string>
    <string name="addOffer">Add New Offer</string>
    <string name="viewOffers">View My Offers</string>
    <string name="username">Username</string>
    <string name="error">Unexpected Error</string>
    <string name="productName">Product Name*</string>
    <string name="productType">Product Type*</string>
    <string name="regDate">Registration Date*</string>
    <string name="expDate">Expiration Date*</string>
    <string name="price">Price*</string>
    <string name="photo">Insert Photo*</string>
    <string name="description">Add a description for the product</string>
    <string name="uploadbtn">Upload Offer</string>
    <string name="category">Pick Categories and Subcategories</string>
    <string name="title_activity_add_offer">AddOfferActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="spin1">
        <item>Technology</item>
        <item>House &amp; Garden</item>
        <item>Fashion for Men</item>
        <item>Fashion for Women</item>
        <item>Sports &amp; Outdoors</item>
        <item>Car &amp; Motorbike</item>
        <item>Baby &amp; Kid</item>
        <item>Health &amp; Beauty</item>
    </string-array>
    <string-array name="spin2_1">
        <item>Telecommunications</item>
        <item>Computers</item>
        <item>TV &amp; Entertainment</item>
        <item>Gaming</item>
        <item>Audio</item>
        <item>Camera &amp; Photo</item>
        <item>Tablets</item>
        <item>Wearables</item>
    </string-array>
    <string-array name="spin2_2">
        <item>Home Appliances</item>
        <item>Home Items</item>
        <item>Tools</item>
        <item>Furniture</item>
        <item>Garden</item>
        <item>Parties, Gifts, Seasonal</item>
        <item>Office Supplies</item>
        <item>Pets</item>
        <item>Decoration</item>
        <item>Wines &amp; Drinks</item>
        <item>Food</item>
    </string-array>
    <string-array name="spin2_3">
        <item>Clothes for Men</item>
        <item>Shoes for Men</item>
        <item>Accessories for Men</item>
        <item>Wristwatches for Men</item>
        <item>Backpacks/Wallets for Men</item>
        <item>Sunglasses for Men</item>
    </string-array>
    <string-array name="spin2_4">
        <item>Clothes for Women</item>
        <item>Shoes for Women</item>
        <item>Accessories for Women</item>
        <item>Wristwatches for Women</item>
        <item>Backpacks/Wallets for Women</item>
        <item>Jewellery for Women</item>
        <item>Sunglasses for Women</item>
    </string-array>
    <string-array name="spin2_5">
        <item>Sports Equipment</item>
        <item>Gymnastics Equipment</item>
        <item>Musical Instruments</item>
        <item>Hunting - Sharpshooting</item>
        <item>Cycling</item>
        <item>Free Time</item>
        <item>Scuba Diving - Fishing</item>
        <item>Games</item>
        <item>Camping</item>
        <item>Beach - Pool</item>
    </string-array>
    <string-array name="spin2_6">
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Boat</item>
    </string-array>
    <string-array name="spin2_7">
        <item>Kids Fashion</item>
        <item>Kids Toys</item>
        <item>Baby Travel &amp; Carriers</item>
        <item>Baby Food</item>
        <item>Health and Caring</item>
        <item>School Products</item>
    </string-array>
    <string-array name="spin2_8">
        <item>Beauty</item>
        <item>Fragrance</item>
        <item>Personal Hygiene</item>
        <item>Health</item>
        <item>Vitamins, Minerals &amp; Supplements</item>
    </string-array>
    <string-array name="spin3_1_1">
        <item>Cordless Phones</item>
        <item>Mobile Phones</item>
        <item>Mobile Phone Cases</item>
        <item>Screen Protectors</item>
        <item>Spare Parts</item>
        <item>Bluetooth</item>
        <item>Phone Batteries</item>
        <item>Handsfree</item>
        <item>Power Banks</item>
        <item>Phone Chargers</item>
        <item>Other Accessories</item>
    </string-array>
    <string-array name="spin3_1_2">
        <item>Laptop &amp; Accessories</item>
        <item>Desktop &amp; Server</item>
        <item>Monitors</item>
        <item>Storage</item>
        <item>Peripherals</item>
        <item>Hardware</item>
        <item>Software</item>
        <item>Networking</item>
    </string-array>
    <string-array name="spin3_1_3">
        <item>Televisions</item>
        <item>Television Stands</item>
        <item>Television Accessories</item>
        <item>Home Cinema</item>
        <item>Media Players</item>
        <item>Projectors</item>
    </string-array>
    <string-array name="spin3_1_4">
        <item>Video Games</item>
        <item>Consoles</item>
        <item>Gaming Peripherals</item>
        <item>Virtual Reality Headsets</item>
        <item>Console Accessories</item>
        <item>Console Spare Parts</item>
        <item>Character Figures</item>
    </string-array>
    <string-array name="spin3_1_5">
        <item>Headphones</item>
        <item>Earphones</item>
        <item>MP3 &amp; Digital Media Players</item>
        <item>Speakers</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="spin3_1_6">
        <item>Compact Digital Cameras</item>
        <item>Compact System Cameras</item>
        <item>Digital SLR Cameras</item>
        <item>Action Cameras</item>
        <item>Camera Lenses</item>
        <item>Camera &amp; Camcorder Bags</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="spin3_1_7">
        <item>Tablets</item>
        <item>Tablet Cases</item>
        <item>Tablet Chargers</item>
        <item>Tablet Batteries</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="spin3_1_8">
        <item>Smart Watches</item>
        <item>Activity Trackers</item>
        <item>Sports Watches</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="spin3_2_1">
        <item>Air Condition</item>
        <item>Heaters</item>
        <item>Fans</item>
        <item>Ovens</item>
        <item>Hobs</item>
        <item>Cooker Hoods</item>
        <item>Dishwashers</item>
        <item>Fridges</item>
        <item>Washing Machines</item>
        <item>Coffee Machines</item>
        <item>Blenders</item>
        <item>Mixers</item>
        <item>Microwaves</item>
        <item>Fryers</item>
        <item>Toasters</item>
        <item>Kitchen Scales</item>
        <item>Irons</item>
        <item>Vacuum Cleaners</item>
        <item>Steam Cleaners</item>
    </string-array>
    <string-array name="spin3_2_2">
        <item>Carpets</item>
        <item>Blankets</item>
        <item>Bed Sheets</item>
        <item>Quilts</item>
        <item>Curtains</item>
        <item>Pillows</item>
        <item>Towels</item>
        <item>Bathrobes</item>
        <item>Cooking Utensils</item>
        <item>Cooking Accessories</item>
        <item>Kitchen Storage</item>
        <item>Cutlery</item>
        <item>Mugs &amp; Glasses</item>
        <item>Plates</item>
        <item>Floor Lamps</item>
        <item>Desk Lamps</item>
        <item>Wall Lamps</item>
        <item>Other</item>
    </string-array>
    <string-array name="spin3_2_3">
        <item>Drills &amp; Screwdrivers</item>
        <item>Combi Tools</item>
        <item>Hand Tools</item>
        <item>Other</item>
    </string-array>
    <string-array name="spin3_2_4">
        <item>Beds</item>
        <item>Wardrobes</item>
        <item>Cabinets</item>
        <item>Bedside Tables</item>
        <item>Couches</item>
        <item>Coffee Tables</item>
        <item>Armchairs</item>
        <item>Desk</item>
        <item>Office Chair</item>
        <item>Bookcase</item>
        <item>Dinner Table</item>
        <item>Dining Chairs</item>
        <item>Other</item>
    </string-array>
    <string-array name="spin3_2_5">
        <item>Garden Machinery</item>
        <item>Garden Hand Tools</item>
        <item>Garden Tables &amp; Chairs</item>
        <item>Outdoor Closet</item>
        <item>Gazebo Tents &amp; Kiosk</item>
        <item>Garden Couch &amp; Benches</item>
        <item>Hammock &amp; Swing</item>
        <item>Garden Umbrella</item>
        <item>Outdoor Lighting</item>
        <item>Hedges</item>
        <item>Construction Materials</item>
        <item>Lawns</item>
        <item>Soil &amp; Stones</item>
        <item>Fountains</item>
        <item>Garden Ornaments</item>
        <item>Barbecue &amp; Rotisserie</item>
        <item>Gardening Tools</item>
        <item>Watering Tools</item>
    </string-array>
    <string-array name="spin3_2_6">
        <item>Articles for Smokers</item>
        <item>Rosary</item>
        <item>Gift Items</item>
        <item>Party Equipment</item>
        <item>Christmas Decoration</item>
        <item>Easter Decoration</item>
        <item>Carnival Dresses</item>
        <item>Traditional Costumes</item>
        <item>Other</item>
    </string-array>
    <string-array name="spin3_2_7">
        <item>Pens</item>
        <item>Pencils</item>
        <item>Marker</item>
        <item>Notebooks</item>
        <item>Stamps</item>
        <item>Other Stationery</item>
        <item>Office Accessories</item>
        <item>Archives</item>
        <item>Calendars</item>
        <item>Print Paper</item>
        <item>Billing Forms</item>
    </string-array>
    <string-array name="spin3_2_8">
        <item>Pet Food</item>
        <item>Leash &amp; Collars</item>
        <item>Pet Transportation</item>
        <item>Pet House</item>
        <item>Pet Hygiene</item>
        <item>Pet Toys</item>
    </string-array>
    <string-array name="spin3_2_9">
        <item>Photo Frames</item>
        <item>Photo Albums</item>
        <item>Wall Clock</item>
        <item>Desktop Clock</item>
        <item>Wallpaper</item>
        <item>Vases &amp; Platters</item>
        <item>Candles</item>
        <item>Lantern</item>
        <item>Posters</item>
        <item>Other Decorative</item>
    </string-array>
    <string-array name="spin3_2_10">
        <item>Drinks</item>
        <item>Wines</item>
        <item>Beers</item>
        <item>Juices</item>
        <item>Refreshments</item>
        <item>Table Water</item>
        <item>Energy Drinks</item>
        <item>Ice Tea</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="spin3_2_11">
        <item></item>
    </string-array>
    <string-array name="spin3_3_1">
        <item>Jacket for Men</item>
        <item>Trousers for Men</item>
        <item>Hoodie for Men</item>
        <item>T-Shirt for Men</item>
        <item>Shirts for Men</item>
        <item>Underwear for Men</item>
        <item>Socks for Men</item>
        <item>Sleepwear for Men</item>
        <item>Swimsuit for Men</item>
    </string-array>
    <string-array name="spin3_3_2">
        <item>Sneakers for Men</item>
        <item>Boots for Men</item>
        <item>Oxfords for Men</item>
        <item>Slippers for Men</item>
        <item>Sports Shoes for Men</item>
    </string-array>
</resources>